# numba_kmeans

./: .gitignore  pyproject.toml
numba_kmeans/: __init__.py  kmeans_cpu.py  kmeans_cuda.py
