[project]
name = "numba_kmeans"
version = "0.1.0"
description = "GPU and CPU accelerated batched KMeans clustering using Numba"
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/kanttouchthis/numba_kmeans"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["numba_kmeans"]

[tool.setuptools.package-dir]
"" = "."